fairway-sf/force-app/main/default/objects/Golf_Shot__c/Golf_Shot__c.object-meta.xml
<CustomObject>
    <label>Golf Shot</label>
    <pluralLabel>Golf Shots</pluralLabel>
    <description>Universal atomic shot fact, logged for every session type: a practice rep, an in-round shot, or a shot taken during a scored game.</description>
    <nameField>
        <label>Golf Shot Name</label>
        <type>AutoNumber</type>
        <displayFormat>SHOT-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>