fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Apex__c.field-meta.xml
<CustomField>
    <fullName>Apex__c</fullName>
    <label>Apex (yds)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>