fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Ball_Speed__c.field-meta.xml
<CustomField>
    <fullName>Ball_Speed__c</fullName>
    <label>Ball Speed (mph)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>