fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Bay__c.field-meta.xml
<CustomField>
    <fullName>Bay__c</fullName>
    <label>Bay</label>
    <type>Lookup</type>
    <referenceTo>Simulator_Bay__c</referenceTo>
    <relationshipName>Golf_Shots</relationshipName>
    <relationshipLabel>Golf Shots</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>