fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Carry_Distance__c.field-meta.xml
<CustomField>
    <fullName>Carry_Distance__c</fullName>
    <label>Carry Distance (yds)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>