fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Club_Path__c.field-meta.xml
<CustomField>
    <fullName>Club_Path__c</fullName>
    <label>Club Path (deg)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Club-delivery metric. Only populated by premium doppler/camera units.</description>
</CustomField>