fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Club_Speed__c.field-meta.xml
<CustomField>
    <fullName>Club_Speed__c</fullName>
    <label>Club Speed (mph)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Club-delivery metric. Only populated by premium doppler/camera units (Trackman, GC Hawk/Quad) — see Data_Tier__c.</description>
</CustomField>