fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Data_Tier__c.field-meta.xml
<CustomField>
    <fullName>Data_Tier__c</fullName>
    <label>Data Tier</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Which class of metrics the connected launch monitor actually captured for this shot. AI-coaching and insight logic must check this before relying on club-delivery fields.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ball Only</fullName><default>true</default><label>Ball Only</label></value>
            <value><fullName>Ball + Club</fullName><default>false</default><label>Ball + Club</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>