fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Face_Angle__c.field-meta.xml
<CustomField>
    <fullName>Face_Angle__c</fullName>
    <label>Face Angle (deg)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
    <description>Club-delivery metric. Only populated by premium doppler/camera units.</description>
</CustomField>