fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Game_Result__c.field-meta.xml
<CustomField>
    <fullName>Game_Result__c</fullName>
    <label>Game Result</label>
    <type>Lookup</type>
    <referenceTo>Game_Result__c</referenceTo>
    <relationshipName>Golf_Shots</relationshipName>
    <relationshipLabel>Golf Shots</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set only when this shot occurred during a scored game (Session_Type__c = Game).</description>
</CustomField>