fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Golf_Session__c.field-meta.xml
<CustomField>
    <fullName>Golf_Session__c</fullName>
    <label>Golf Session</label>
    <type>Lookup</type>
    <referenceTo>Golf_Session__c</referenceTo>
    <relationshipName>Golf_Shots</relationshipName>
    <relationshipLabel>Golf Shots</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>