fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Hole_Number__c.field-meta.xml
<CustomField>
    <fullName>Hole_Number__c</fullName>
    <label>Hole Number</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <description>Blank for pure practice shots. Populated when the shot occurred during a Round session.</description>
</CustomField>