fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Is_Mulligan__c.field-meta.xml
<CustomField>
    <fullName>Is_Mulligan__c</fullName>
    <label>Is Mulligan</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>