fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Launch_Angle__c.field-meta.xml
<CustomField>
    <fullName>Launch_Angle__c</fullName>
    <label>Launch Angle (deg)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>