fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Raw_Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload_JSON__c</fullName>
    <label>Raw Payload JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Full mock/vendor JSON payload for this shot, so the future middleware/Data Cloud story can be demoed without building it.</description>
</CustomField>