fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Session_Participant__c.field-meta.xml
<CustomField>
    <fullName>Session_Participant__c</fullName>
    <label>Session Participant</label>
    <type>Lookup</type>
    <referenceTo>Session_Participant__c</referenceTo>
    <relationshipName>Golf_Shots</relationshipName>
    <relationshipLabel>Golf Shots</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>