fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Shot_Context__c.field-meta.xml
<CustomField>
    <fullName>Shot_Context__c</fullName>
    <label>Shot Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Tee</fullName><default>false</default><label>Tee</label></value>
            <value><fullName>Fairway</fullName><default>false</default><label>Fairway</label></value>
            <value><fullName>Rough</fullName><default>false</default><label>Rough</label></value>
            <value><fullName>Bunker</fullName><default>false</default><label>Bunker</label></value>
            <value><fullName>Green</fullName><default>false</default><label>Green</label></value>
            <value><fullName>Recovery</fullName><default>false</default><label>Recovery</label></value>
            <value><fullName>Range</fullName><default>true</default><label>Range</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>