fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Shot_Number__c.field-meta.xml
<CustomField>
    <fullName>Shot_Number__c</fullName>
    <label>Shot Number</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <description>Sequence number within the session.</description>
</CustomField>