fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Shot_Shape__c.field-meta.xml
<CustomField>
    <fullName>Shot_Shape__c</fullName>
    <label>Shot Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Straight</fullName><default>false</default><label>Straight</label></value>
            <value><fullName>Fade</fullName><default>false</default><label>Fade</label></value>
            <value><fullName>Draw</fullName><default>false</default><label>Draw</label></value>
            <value><fullName>Slice</fullName><default>false</default><label>Slice</label></value>
            <value><fullName>Hook</fullName><default>false</default><label>Hook</label></value>
            <value><fullName>Push</fullName><default>false</default><label>Push</label></value>
            <value><fullName>Pull</fullName><default>false</default><label>Pull</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>