fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Side_Carry__c.field-meta.xml
<CustomField>
    <fullName>Side_Carry__c</fullName>
    <label>Side Carry (yds)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
    <description>Positive = right of target line, negative = left.</description>
</CustomField>