fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Smash_Factor__c.field-meta.xml
<CustomField>
    <fullName>Smash_Factor__c</fullName>
    <label>Smash Factor</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
    <description>Club-delivery metric. Requires both ball speed and club speed to be captured.</description>
</CustomField>