fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Spin_Axis__c.field-meta.xml
<CustomField>
    <fullName>Spin_Axis__c</fullName>
    <label>Spin Axis (deg)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>