fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Spin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Spin_Rate__c</fullName>
    <label>Spin Rate (rpm)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>