fairway-sf/force-app/main/default/objects/Golf_Shot__c/fields/Total_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance__c</fullName>
    <label>Total Distance (yds)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>